--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 	<a href="add.html">add</a>
 	<a href="try.html">try</a>
-	<a href="importExport.html">import</a>
+	<a href="ImportExport.html">import</a>
 </body>
 </html>
