add design to index.html
main page now is covered by green colors.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>test</title>
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-	<a href="add.html">add</a>
-	<a href="try.html">try</a>
-	<a href="ImportExport.html">import</a>
+	<div class="linkC">
+		<a href="add.html">add</a>
+		<a href="try.html">try</a>
+		<a href="ImportExport.html">import</a>
+	</div>
+	
 </body>
 </html>
