--- a/try.html
+++ b/try.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/try.css">
 	<title>try</title>
 	<!--  -->
 	<link rel="stylesheet" href="css/main.css">
@@ -11,7 +12,7 @@
 <body>
 	<div id="test">
 		<p id="question"></p>
-		<input type="text" id="ans">
+		<input type="text" id="ans"><br/>
 		<button id="ansB">answear</button>
 	</div>
 	<div id="result">
