--- a/add.html
+++ b/add.html
@@ -2,20 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/add.css">
 	<title>add test</title>
-
-		 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<!--  -->
 	<script src="js/transformator.js"></script>
 	<script src="js/localstor.js"></script>
 </head>
 <body>
-	<div class="input col-md-2 col-md-offset-5 col-sm-6 col-sm-offset-3">
+	<div class="add_form">
 		<input type="text" id = "word"><br>
 		<input type="text" id="translate"><br>
-		<button id = "send" class="col-md-5 col-md-offset-5 col-sm-5 col-sm-offset-5">add</button>
+		<button id = "send">add</button>
 	</div><br>
 	<div id="list">
 		
