--- a/add.html
+++ b/add.html
@@ -4,9 +4,7 @@
 	<meta charset="UTF-8"> 
 	<title>add test</title>
 
-		 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="css/add.css">
 	<!--  -->
 	<script src="js/transformator.js"></script>
 	<script src="js/localstor.js"></script>
